Strongly type path input for getWindowsLongPathString as AbsPath
Summary:
The function requires an absolute path as an input anyway.
If you give it a relative path, it'll just... pretend it is absolute.
Which sucks. So instead require taking an AbsPath and push responsibility
to the caller to more strongly assert they are using an absolute path.

Reviewed By: stepancheg

shipit-source-id: 86737367d4b137d268800cbbf6f7a4660c41e345